<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primaryColor"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TvBienvenido"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:textColor="@color/primaryTextColor"/>

    <Button
            android:id="@+id/ButtonConnect"
            android:layout_marginTop="8dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/BtnConectar"
            android:layout_gravity="center_horizontal"/>

    <Button
            android:id="@+id/btnAjustes"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:text="@string/BtnAjustes"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"/>

</LinearLayout>